🐞 fix overlapping page-navs

--- a/modules/page-nav/page-nav.css
+++ b/modules/page-nav/page-nav.css
@@ -18,7 +18,7 @@
   padding-left: 15px;
 }
 
-@media screen and ( min-width: 1220px ) {
+@media screen and ( min-width: 960px ) {
   .page-nav {
     position: absolute;
     left: 0;
